Fixed bool[] vs bitarray and added missing png.

--- a/Speech Recognition test/Speech Recognition test.csproj
+++ b/Speech Recognition test/Speech Recognition test.csproj
@@ -266,6 +266,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="continueConsole.png" />
     <Content Include="x64\liblept172.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
