--- a/Speech Recognition test/App.config
+++ b/Speech Recognition test/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Speech_Recognition_test.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <Speech_Recognition_test.Properties.Settings>
+            <setting name="LogFilePath" serializeAs="String">
+                <value>C:/Users/katel/Desktop/Crystal_ocr_log.txt</value>
+            </setting>
+        </Speech_Recognition_test.Properties.Settings>
+    </applicationSettings>
 </configuration>
