Added dirty support for 'again' command and refactored some stuff.

--- a/Speech Recognition test/Speech Recognition test.csproj
+++ b/Speech Recognition test/Speech Recognition test.csproj
@@ -67,7 +67,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BattleMenuCursor.cs" />
+    <Compile Include="BattleOption.cs" />
+    <Compile Include="BattleState.cs" />
     <Compile Include="DateTimeExtension.cs" />
+    <Compile Include="EventChain.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
